--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,10 +93,12 @@ p {
 
 
 #name-icon{
+    float: left;
+    text-align: center;
     background-color: #4aaaa5;
     width: 250px;
+    height: 80px;
     padding: 0px 40px 0px 40px;
-    float: left;
 }
 
 #about-link{
