added an additional image on about me page, tweaked some css positional parameters

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,13 @@ body{
     font-size: 18px;
     height: 100%;
     width: 100%;
+    position: relative;
+
 }
 
 header{
-    position: absolute;
+    position: fixed;
+    z-index: 10;
     top: 0;
     left: 0;
     height: 80px;
@@ -19,17 +22,20 @@ header{
 }
 
 main{
+    position: relative;
     overflow: auto;
     width: 956px;
     background-color: #ffffff;
     border: 2px solid #dddddd;
+    top: 100px;
     margin-left: 20%;
-    margin-top: 10%;
+    /* margin-top: 7.5%; */
     margin-bottom: 10%;
 }
 
 footer{
     position: fixed;
+    z-index: 10;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -39,6 +45,7 @@ footer{
     text-align: center;
     padding-top: 30px;
     padding-bottom: 10px;
+    font-size: 14px;
 }
 
 h1{
@@ -132,4 +139,11 @@ p {
     width: 226px;
     margin: 0px 20px 0px 28px;
     float: left;
+}
+
+#cl-trophy-lift{
+    width: 596px;
+    clear: both;
+    border: 2px solid #777777;
+    margin: 0px 178px 20px 178px;
 }
