--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,9 @@ body{
     height: 100%;
     width: 100%;
     position: relative;
+    margin: 0px;
+    top: 0;
+    left: 0;
 
 }
 
@@ -23,13 +26,13 @@ header{
 
 main{
     position: relative;
+    clear: both;
     overflow: auto;
     width: 956px;
     background-color: #ffffff;
     border: 2px solid #dddddd;
     top: 100px;
     margin-left: 20%;
-    /* margin-top: 7.5%; */
     margin-bottom: 10%;
 }
 
@@ -61,15 +64,43 @@ a{
     text-decoration: none;
     color: #777777;
     opacity: 0.5;
+    margin-left: 15px;
 
+}
+
+a:hover{
+    background-color: #4aaaa5;
+    color: #000000;
+    cursor: pointer;
 }
 
 p {
     width: 900px;
-    margin: 28px;
+    margin: 30px;
     line-height: 24px;
 }
 
+textarea {
+    margin-top: 10px;
+    margin-left: 30px;
+    margin-bottom: 20px;
+    float: left;
+    width: 900px;
+    height: 300px;
+}
+
+label {
+    margin-top: 20px;
+    margin-left: 30px;
+    float: left;
+}
+
+input {
+    margin-top: 10px;
+    margin-left: 30px;
+    float: left;
+    width: 900px;
+}
 /* Classes */
 
 .heading {
@@ -79,15 +110,17 @@ p {
 
 .navbar{
     width: 960px;
+    max-height: 80px;
     margin-left: 20%;
-    background-color: #666666
+    background-color: #ffffff;
 }
 
 .links{
-    float: left;
-    width: 630px;
+    float: right;
+    width: 680px;
+    max-height: 60px;
+    padding: 10px 0px;
     text-align: right;
-    margin-top: 10px;
 }
 
 
@@ -103,33 +136,15 @@ p {
     float: left;
     text-align: center;
     background-color: #4aaaa5;
-    width: 250px;
+    width: 280px;
     height: 80px;
-    padding: 0px 40px 0px 40px;
 }
 
-#about-link{
-    border-right: 1px solid #777777;
-    padding-right: 10px;
-
-}
-
-#portfolio-link{
-    border-right: 1px solid #777777;
-    padding-right: 10px;
-    padding-left: 10px;
-
-}
-
-#contact-link{
-    padding-left: 10px;
-
-}
 
 #about-me{
     width: 900px;
     color: #4aaaa5;
-    margin-left: 28px;
+    margin-left: 30px;
     padding-bottom: 30px;
     border-bottom: 2px solid #cccccc;
 }
@@ -137,7 +152,7 @@ p {
     display: block;
     height: 205px;
     width: 226px;
-    margin: 0px 20px 0px 28px;
+    margin: 0px 20px 0px 30px;
     float: left;
 }
 
@@ -146,4 +161,25 @@ p {
     clear: both;
     border: 2px solid #777777;
     margin: 0px 178px 20px 178px;
+}
+
+#email-form{
+    clear:both;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+#submit-button{
+    margin-bottom: 20px;
+    margin-left: 30px;
+    float: left;
+    width: 100px;
+    height: 30px;
+    text-align: center;
+    color: #ffffff;
+    background-color: #4aaaa5;
+    border: 1px solid #777777;
+}
+
+#submit-button:hover{
+    cursor: pointer;
 }
